--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,12 +1,17 @@
+
+
 .header {
-    background-color: green;
     grid-column: 2/3;
     grid-row: 1/2;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
+    
     padding: 10px 50px 10px 25px;
     font-size: 16px;
+
+    background-color: white;
+    box-shadow: 0px 7px 8px -4px rgba(107, 107, 107, 0.54);
 }
 
 .utility-header {
@@ -23,7 +28,8 @@
             border-radius: 24px;
             border: none;
             height: 32px;
-            width: 100%;  
+            width: 100%;
+            background-color: rgb(221, 221, 221);  
         }
     }
     .profile-container {
@@ -35,9 +41,53 @@
     }
 }
 
+.main-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    .user-info-container {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        align-items: center;
+        gap: 1rem;
+        
+        p {
+            margin:0;
+            font-size: 0.8rem;
+        }
+
+        h3 {
+            margin: 0;
+        }
+    }
+    .cta-container {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        justify-content: end;
+        gap: 1rem;
+
+        button.cta {
+            justify-self: end;
+            align-self: center;
+            font-size: 1rem;
+            padding: 0.5rem 1.5rem;
+            border-radius: 24px;
+            border: none;
+            background-color: $primary-color;
+            color: white;
+        }
+    }
+}
+
 .profile-pic {
+    width: 48px;
+    height: 48px;
+    border-radius: 100%;
+    background-image: url("/assets/bird-nypubliclibrary-unsplash.jpg");
+    background-size: 48px;
+}
+
+.profile-pic-small {
     width: 36px;
     height: 36px;
-    border-radius: 100%;
-    background-color: blue;
+    background-size: 36px;
 }
