--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,7 +1,7 @@
 
 
 .sidebar {
-    background-color: rgb(164, 164, 199);
+    background-color: $primary-color;
     grid-column: 1/2;
     grid-row: 1/span 2;
     padding: 10% 10%;
